<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp">
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title"/>
	    
	    <EditText 
	        android:id="@+id/editDeckName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/enterNameHint"
	        android:inputType="textCapSentences"/>
	    
	    <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/authors"/>
	    
	    <EditText 
	        android:id="@+id/editDeckAuthors"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/enterAuthorHint"
	        android:inputType="textCapSentences"/>
	    
	    <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"/>
	    
	    <EditText 
	        android:id="@+id/editDeckSummary"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/enterSummaryHint"
	        android:inputType="textCapSentences|textMultiLine"
	        android:singleLine="false"
	        android:gravity="top"/>
	    
	    <Button 
	        android:id="@+id/editCardsButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:text="@string/editCards"/>
	
	</LinearLayout>
</ScrollView>