<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
	    <EditText
		    android:id="@+id/searchInput"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:maxLines="1"
		    android:scrollHorizontally="true"
		    android:hint="@string/searchHint"
		    android:state_enabled="true"
		    android:imeOptions="actionSearch"
		    android:imeActionLabel="Search"
		    android:layout_weight="1"/>
	    
	    <Button 
            android:id="@+id/searchButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/search"/>
	    
    
    </LinearLayout>
    
	<ListView 
	    android:id="@+id/resultsList"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1.0"
	    android:background="@android:color/transparent"/>
	
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/prevPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/previousSearchPage"
            android:enabled="false"/>
        
        <TextView 
            android:id="@+id/pageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
        
        <Button
            android:id="@+id/nextPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/nextSearchPage"
            android:enabled="false"/>
    
    </LinearLayout>
	
</LinearLayout>